# cloxpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run_e2e_tests.py
src/: ast_evaluator.cpp  ast_stringifier.cpp  ast_stringifier.hpp  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  concatenator.hpp  debug.cpp  debug.hpp  environment.cpp  environment.hpp  error_handler.cpp  error_handler.hpp  errorhandler.cpp  expr.hpp  interpreter.cpp  interpreter.hpp  literal.cpp  literal.hpp  lox_callable.hpp  lox_class.cpp  lox_class.hpp  lox_function.cpp  lox_function.hpp  main.cpp  main_ast_stringifier.cpp  main_clox.cpp  main_jlox.cpp  main_scanner.cpp  memory.cpp  memory.hpp  object.cpp  object.hpp  parser.cpp  parser.hpp  resolver.cpp  resolver.hpp  return.hpp  runtime_error.hpp  (+19 more)
tools/: gen_ast.py
